--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           class="footer__link twitter-link"
           target="_blank"
           href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
+          >Nihal Abedin</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
         as your own product.
       </p>
